Update thesis document

--- a/front-and-back-matter/_acknowledgements.Rmd
+++ b/front-and-back-matter/_acknowledgements.Rmd
@@ -1,4 +1,10 @@
-To-do
+Thanks to Jeff Eaton and Seth Flaxman for supervision of this research;
+staff and students of the StatML CDT at Imperial and Oxford;
+members of the HIV inference lab at Imperial;
+Kevin Esvelt and the Sculpting Evolution lab for hosting my visit to MIT;
+Alex Stringer for hosting my visit to Waterloo;
+the Bill & Melinda Gates Foundation and EPSRC for funding this PhD;
+my friends and family for their support.
 
 \begin{flushright}
 Adam Howes \\
