--- a/01-background.Rmd
+++ b/01-background.Rmd
@@ -22,12 +22,12 @@ bibliography: references.bib
 * Small-area estimation in health, epidemiology and environment
   * The Small-Area Health Statistics Unit at Imperial was set-up to monitor health around point sources of environmental pollution in response to the Sellafield enquiry into the increased incidence of childhood leukemia leukaemia near a nuclear reprocessing plant [@elliott1992small]. This research has a focus on ratios of observed events to expected events, and testing hypothesis about hot-spots
 
-
 ## HIV/AIDS
 
-* Brief summary of the HIV/AIDS epidemic, up to the situation now, focusing on SSA
-* The historic role of surveillance techniques and statistical models in responding to the epidemic
-* The aims for HIV response going forward, and what surveillance capabilities are needed to meet them
+* The HIV/AIDS epidemic has a large disease burden
+* The disease burden is unevenly distributed in space and across communities
+* Surveillance techniques and statistical models have been used to respond to the epidemic
+* Aims for HIV response going forward, and surveillance capabilities are needed to meet them
 * Data difficulties including sparsity in space and time, survey bias, conflicting information sources, hard to reach populations, demography
 * Phasing out of nationally-representative household surveys for HIV. Importance of relying on multiple sources of information: evidence synthesis, Naomi, multivariate models. Bayesian survey design
 * Why isn't case-based surveillance included yet?
@@ -40,69 +40,32 @@ bibliography: references.bib
 * Geographic priorisation versus demographic priorisation: hotspots, key populations, screening and individual level risk characteristics
 * Adolescent girls and young women identified as a key demographic, stratification by sexual risk
 * Interventions more likely to be demographic specific rather than geographic specific so if majority of difference in effectiveness depends on intervention type then demographic targeting may be more priority
+* The population strategy of Geoffrey Rose 
 
-## Clemens UNAIDS meeting
+## Statistics
 
-* How can we develop an operational aid for using the spreadsheet as a programmatic planning tool? How should the information be used in practice?
-* How to find people within the district who fall under each category?
-* There is some non-zero contribution of not sexually active individuals to HIV incidence (e.g. drug injectors). Particularly if extend to men then might have to take it into account. In some countries the population of drug injectors is small but not negligible
-* How to capture the potential effects of interventions?
-* What is the development plan for including ABYM? Extension to adults aged 15-49?
-* Where is new technology required?
-* If a country has very old data should there be a warning about this?
-* Dependence of FSW on clustering and migration
-
-## Elona meeting
-
-* Researcher at UCT. Working with young people.
-  * 1000+ long interviews of young people's lives
-  * Extracted data from the South Africa cohort
-* GF request for proposal for 3 year partnership. Bring together existing evidence (broad)
-  * Work with colleagues in 5 countries to refine their AGYW programming CMR, KEN, LSO, MOZ
-* How to take the data from the Naomi model and the data from spreadsheet to target interventions at a national level?
-* Jeff: Naomi estimates. Treatment, coverage, new infections. By district, age. Odds-ratios assumed to be the same. Incidence is a modelled outcome. Proportional to district level viremia. Age pattern of incidence based on incidence ratios from Spectrum.
-* Differential prevention. Differential risk.
-* What has the impact of DREAMS been?
-* VACs surveys (VACS survey sizes are very variable), MICS surveys
-* HIPS study: losing a parent
-* Risk categories we're using are really hard to pick up
-* Multi-outcome analysis Cluver Rudgard. Sherr. Food security, motherhood ad school enrollment
-* Pathway 1: schooling
-* Pathway 2: reducing income shocks, food insecurity
-* Leigh South Africa work
-* VACS data in LSO to say how well tackling the pathways does
-* Simulate interventions along the causal pathway
-* Pros and cons of more of less nuance in the risk category definitions
-* Exposure to national programming, poverty layers
-* Targetting vs access points into services
-* Implementation frameworks. Doesn't make sense to make recommendations which are not applicable
-* Work on one or two countries. Will at Oxford, Martina at Capetown
-
-<!-- The population strategy strategy of Geoffrey Rose https://en.wikipedia.org/wiki/Geoffrey_Rose_(epidemiologist) -->
-
-<!-- * Definition of a latent Gaussian model [@rue2009approximate] -->
-<!--   * Common examples -->
-<!-- * Examples of models used in HIV inference which are close to being latent Gaussian models, but aren't, and hence can't be fit using INLA -->
-<!--   * Disaggregation models -->
-<!--   * Evidence synthesis models like Naomi [@eaton2021naomi; @eaton2019joint] -->
-<!--   * Compartmental models -->
-<!--   * ART attendance models -->
-<!--   * Multinomial models like for district-level risk factors -->
-<!--     * Multinomial logistic regression -->
-<!-- * Other complex models from [ecology](https://www.bioss.ac.uk/rsse/2013/September2013slides-Illian.pdf) that can't currently be fit using INLA -->
-<!-- * Definition of extended latent Gaussian models [@stringer2021fast] -->
-<!--   * Many-to-one is not an issue for `R-INLA`, the latent field is implemented as a concatenation of many vectors already. For example, for $\eta_i = \beta_0 + \phi_i$ with $i = 1, \ldots, n$ the latent field is $(\eta_1, \ldots, \eta_n, \beta_0, \phi_1, \ldots, \phi_n)^\top$ of dimension $2n + 1$ -->
-<!--   * For additive models, the only non-linearity is in the link function -->
-<!-- * Approximate Bayesian inference methods -->
-<!--   * Markov chain Monte Carlo -->
-<!--   * Variational Bayes -->
-<!--   * Laplace approximation and integrated nested Laplace approximation -->
-<!--   * Empirical Bayes -->
-<!-- * Particular properties of spatio-temporal models (and LGMs) which make INLA, if feasible, often the best option -->
-<!-- * The increasing popularity of empirical Bayes approaches, like Template Model Builder [@osgoodzimmerman2021statistical] -->
-<!-- * Adaptive Gauss Hermite quadrature (AGHQ), like the central composite design (CCD) and grid strategies, is one way to choose the hyper-parameter integration points in the integrated nested Laplace approximation (INLA) -->
-<!-- * Finn Lindgren is working on a method for non-linear predictors, called the [iterative INLA method](https://github.com/inlabru-org/inlabru/blob/55896f10d563c14e34cab577b29b733aac051f86/vignettes/method.Rmd) -->
-<!--   * More [slides](https://informatique-mia.inrae.fr/reseau-resste/sites/default/files/2020-09/slides-Lindgren_Avignon2018.pdf) here -->
-<!-- * Thesis work of [Follestad](https://cds.cern.ch/record/639625/files/sis-2003-305.pdf) that stayed as a preprint -->
-
-<!-- How does the ecological fallacy relate to aggregated output models -->
+* Definition of a latent Gaussian model [@rue2009approximate]
+  * Common examples
+* Examples of models used in HIV inference which are close to being latent Gaussian models, but aren't, and hence can't be fit using INLA
+  * Disaggregation models
+  * Evidence synthesis models like Naomi [@eaton2021naomi; @eaton2019joint]
+  * Compartmental models
+  * ART attendance models
+  * Multinomial models like for district-level risk factors
+    * Multinomial logistic regression
+* Other complex models from [ecology](https://www.bioss.ac.uk/rsse/2013/September2013slides-Illian.pdf) that can't currently be fit using INLA
+* Definition of extended latent Gaussian models [@stringer2021fast]
+  * Many-to-one is not an issue for `R-INLA`, the latent field is implemented as a concatenation of many vectors already. For example, for $\eta_i = \beta_0 + \phi_i$ with $i = 1, \ldots, n$ the latent field is $(\eta_1, \ldots, \eta_n, \beta_0, \phi_1, \ldots, \phi_n)^\top$ of dimension $2n + 1$
+  * For additive models, the only non-linearity is in the link function
+* Approximate Bayesian inference methods
+  * Markov chain Monte Carlo
+  * Variational Bayes
+  * Laplace approximation and integrated nested Laplace approximation
+  * Empirical Bayes
+* Particular properties of spatio-temporal models (and LGMs) which make INLA, if feasible, often the best option
+* The increasing popularity of empirical Bayes approaches, like Template Model Builder [@osgoodzimmerman2021statistical]
+* Adaptive Gauss Hermite quadrature (AGHQ), like the central composite design (CCD) and grid strategies, is one way to choose the hyper-parameter integration points in the integrated nested Laplace approximation (INLA)
+* Finn Lindgren is working on a method for non-linear predictors, called the [iterative INLA method](https://github.com/inlabru-org/inlabru/blob/55896f10d563c14e34cab577b29b733aac051f86/vignettes/method.Rmd)
+  * More [slides](https://informatique-mia.inrae.fr/reseau-resste/sites/default/files/2020-09/slides-Lindgren_Avignon2018.pdf) here
+* Thesis work of [Follestad](https://cds.cern.ch/record/639625/files/sis-2003-305.pdf) that stayed as a preprint
+* How does the ecological fallacy relate to aggregated output models
