--- a/03-multi-agyw.Rmd
+++ b/03-multi-agyw.Rmd
@@ -17,4 +17,5 @@ bibliography: references.bib
 \markboth{Spatio-temporal estimates of HIV risk group proportions for adolescent girls and young women across 13 priority countries in sub-Saharan Africa}{}
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
 
+The repository for this work is [`athowes/multi-agyw`](https://github.com/athowes/multi-agyw).
 Include an edited version of the corresponding paper here.
