--- a/04-elgm-inf.Rmd
+++ b/04-elgm-inf.Rmd
@@ -12,9 +12,10 @@ documentclass: book
 bibliography: references.bib
 ---
 
-# Models for spatial structure in small-area estimation {-}
+# Simplifying Integrated nested Laplace approximation with adaptive Gaussian Hermite quadrature {-}
 \adjustmtc
-\markboth{Models for spatial structure in small-area estimation}{}
+\markboth{Simplifying Integrated nested Laplace approximation with adaptive Gaussian Hermite quadrature}{}
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
 
+The repository for this work is [`athowes/elgm-inf`](https://github.com/athowes/elgm-inf).
 Include an edited version of the corresponding paper here.
