--- a/front-and-back-matter/_welcome-ebook.Rmd
+++ b/front-and-back-matter/_welcome-ebook.Rmd
@@ -1,6 +1,6 @@
 # Welcome {-}
 
-This is the e-book version of my PhD thesis.
+This is the e-book version of my (work-in-progress) PhD thesis.
 
 ## Abstract {-}
 ```{r abstract, child=here::here('front-and-back-matter/_abstract.Rmd')}
