--- a/front-and-back-matter/_welcome-ebook.Rmd
+++ b/front-and-back-matter/_welcome-ebook.Rmd
@@ -1,11 +1,9 @@
 # Welcome {-}
 
-This is the e-book version of my (work-in-progress) PhD thesis.
-
-## Abstract {-}
-```{r abstract, child=here::here('front-and-back-matter/_abstract.Rmd')}
-```
+This is the e-book version of my PhD thesis, submitted to Imperial College London in accordance with the requirements of the degree of Doctor of Philosophy in Modern Statistics and Statistical Machine Learning.
+The associated GitHub repository is [`athowes/thesis`](https://github.com/athowes/thesis).
 
 ## Acknowledgments {-}
+
 ```{r acknowledgments, child=here::here('front-and-back-matter/_acknowledgements.Rmd')}
 ```
