--- a/01-background.Rmd
+++ b/01-background.Rmd
@@ -17,24 +17,28 @@ bibliography: references.bib
 \markboth{Background}{}
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
 
-## Disease surveillance
+## Disease surveillance and small-area estimation
 
+* Disease surveillance is a central application of statistics
 * Small-area estimation in health, epidemiology and environment
-  * The Small-Area Health Statistics Unit at Imperial was set-up to monitor health around point sources of environmental pollution in response to the Sellafield enquiry into the increased incidence of childhood leukemia leukaemia near a nuclear reprocessing plant [@elliott1992small]. This research has a focus on ratios of observed events to expected events, and testing hypothesis about hot-spots
+* The Small-Area Health Statistics Unit at Imperial was set-up to monitor health around point sources of environmental pollution in response to the Sellafield enquiry into the increased incidence of childhood leukemia leukaemia near a nuclear reprocessing plant [@elliott1992small]. This research has a focus on ratios of observed events to expected events, and testing hypothesis about hot-spots.
 
 ## HIV/AIDS
 
-* The HIV/AIDS epidemic has a large disease burden
-* The disease burden is unevenly distributed in space and across communities
+* HIV/AIDS has a large disease burden
+* The disease burden is unevenly distributed in space and across communities and individuals
 * Surveillance techniques and statistical models have been used to respond to the epidemic
-* Aims for HIV response going forward, and surveillance capabilities are needed to meet them
+* Key HIV indicators are HIV prevalence, HIV incidence, ART coverage and coverage of other interventions such as PrEP, PEP
 * Data difficulties including sparsity in space and time, survey bias, conflicting information sources, hard to reach populations, demography
-* Phasing out of nationally-representative household surveys for HIV. Importance of relying on multiple sources of information: evidence synthesis, Naomi, multivariate models. Bayesian survey design
+* Aims for HIV response going forward, and surveillance capabilities are needed to meet them
+* Phasing out of nationally-representative household surveys for HIV
+  * Bayesian survey design
+* Importance of relying on multiple sources of information
+  Creates requirement for for complex models e.g. evidence synthesis, Naomi, multivariate models
 * Why isn't case-based surveillance included yet?
   * There aren't individual linked databases and patient records have to be consolidated
   * Passive case-based surveillance
   * Post-hoc matching and create a case-based surveillance record
-* Key HIV indicators are HIV prevalence, HIV incidence, ART coverage and coverage of other interventions such as PrEP, PEP
 * Drivers of transmission
 * Possible interventions are ART, condoms, PrEP and PEP, education, economic empowerment, VMMC
 * Geographic priorisation versus demographic priorisation: hotspots, key populations, screening and individual level risk characteristics
@@ -42,9 +46,23 @@ bibliography: references.bib
 * Interventions more likely to be demographic specific rather than geographic specific so if majority of difference in effectiveness depends on intervention type then demographic targeting may be more priority
 * The population strategy of Geoffrey Rose 
 
-## Statistics
+## Bayesian spatio-temporal statistics
 
+* The practice of doing Bayesian statistics primarily concerns construction of a generative model for the data we observe
+* In spatio-temporal statistics, the data is indexed by spatial and or temporal location
+* The independent and identically distributed (IID) assumptions commonly used for observations are rarely suitable in the spatio-temporal setting
+* We expect there to be spatio-temporal structure
+* Given a generative model, computation of the posterior distribution proceeds using approximate Bayesian inference methods
+* Markov chain Monte Carlo (MCMC) is the most popular approach and works by simulating samples from a Markov chain which by construction has stationary distribution equal to the distribution of interest
+* Variational Bayes approaches assume the posterior distribution belongs to some class and use optimisation to choose the best member of that class
+* Laplace approximation and integrated nested Laplace approximation
+* Empirical Bayes
 * Definition of a latent Gaussian model [@rue2009approximate]
+\begin{alignat}{2}
+&\text{(Observations)}     &        y_i &\sim p(y_i \, | \, x_i, \btheta), \quad i = 1, \ldots, n, \label{eq:data} \\
+&\text{(Latent field)}     &        \x &\sim \mathcal{N}(\x \, | \, \mathbf{0}, \mathbf{Q}(\btheta)^{-1}), \label{eq:process} \\
+&\text{(Parameters)}       & \qquad \btheta &\sim p(\btheta), \label{eq:parameters}
+\end{alignat}
   * Common examples
 * Examples of models used in HIV inference which are close to being latent Gaussian models, but aren't, and hence can't be fit using INLA
   * Disaggregation models
@@ -57,11 +75,6 @@ bibliography: references.bib
 * Definition of extended latent Gaussian models [@stringer2021fast]
   * Many-to-one is not an issue for `R-INLA`, the latent field is implemented as a concatenation of many vectors already. For example, for $\eta_i = \beta_0 + \phi_i$ with $i = 1, \ldots, n$ the latent field is $(\eta_1, \ldots, \eta_n, \beta_0, \phi_1, \ldots, \phi_n)^\top$ of dimension $2n + 1$
   * For additive models, the only non-linearity is in the link function
-* Approximate Bayesian inference methods
-  * Markov chain Monte Carlo
-  * Variational Bayes
-  * Laplace approximation and integrated nested Laplace approximation
-  * Empirical Bayes
 * Particular properties of spatio-temporal models (and LGMs) which make INLA, if feasible, often the best option
 * The increasing popularity of empirical Bayes approaches, like Template Model Builder [@osgoodzimmerman2021statistical]
 * Adaptive Gauss Hermite quadrature (AGHQ), like the central composite design (CCD) and grid strategies, is one way to choose the hyper-parameter integration points in the integrated nested Laplace approximation (INLA)
