--- a/front-and-back-matter/_abstract.Rmd
+++ b/front-and-back-matter/_abstract.Rmd
@@ -1,2 +1,5 @@
-Disease surveillance alters policy.
-Complex statistical models and quantification of uncertainty are required.
+HIV is a large problem.
+Disease burden is unevenly distributed.
+Effective public health response and prioritised prevention requires accurate, timely, high-resolution estimates of epidemic and demographic indicators.
+Complex statistical models are required to overcome significant data challenges.
+In this thesis, I develop and apply Bayesian spatio-temporal methods for HIV surveillance.
