Write some future work and conclusions

--- a/04-elgm-inf.Rmd
+++ b/04-elgm-inf.Rmd
@@ -12,9 +12,9 @@ documentclass: book
 bibliography: references.bib
 ---
 
-# Simplifying Integrated nested Laplace approximation with adaptive Gaussian Hermite quadrature {-}
+# Fast, approximate inference for the Naomi model
 \adjustmtc
-\markboth{Simplifying Integrated nested Laplace approximation with adaptive Gaussian Hermite quadrature}{}
+\markboth{Fast, approximate inference for the Naomi model}{}
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
 
 The repository for this work is [`athowes/elgm-inf`](https://github.com/athowes/elgm-inf).
