--- a/front-and-back-matter/_acknowledgements.Rmd
+++ b/front-and-back-matter/_acknowledgements.Rmd
@@ -1,9 +1,9 @@
 Thanks to Jeff Eaton and Seth Flaxman for supervision of this research;
 staff and students of the StatML CDT at Imperial and Oxford;
-members of the HIV inference lab at Imperial;
-Mike McLaren, Kevin Esvelt and the Sculpting Evolution lab for hosting my visit to MIT;
+members of the HIV inference group at Imperial;
+Mike McLaren, Kevin Esvelt, the Nucleic Acid Observatory team, and the Sculpting Evolution lab for hosting my visit to MIT;
 Alex Stringer for hosting my visit to Waterloo;
-the Effective altruism community;
+the Effective Altruism community;
 the Bill & Melinda Gates Foundation and EPSRC for funding this PhD;
 my friends and family for their support.
 
