--- a/references.bib
+++ b/references.bib
@@ -415,3 +415,73 @@
   year={1992},
   publisher={BMJ Publishing Group Ltd}
 }
+
+@article{howes2022spatio,
+  title={Spatio-temporal estimates of HIV risk group proportions for adolescent girls and young women across 13 priority countries in sub-Saharan Africa},
+  author={Howes, Adam and Risher, Kathryn A and Stevens, Oliver and Jia, Katherine M and Wolock, Timothy M and Esra, Rachel and Zembe, Lycias and Wanyeki, Ian and Mahy, Mary and Benedikt, Clemens and others},
+  journal={medRxiv},
+  year={2022},
+  publisher={Cold Spring Harbor Laboratory Press}
+}
+
+@article{howes2023integrated,
+  title={Integrated nested Laplace approximations for extended latent Gaussian models with application to the Naomi HIV model},
+  author={Howes, Adam and Stringer, Alex and Flaxman, Seth, and Eaton, Jeffrey},
+  journal={arXiv},
+  year={2023},
+  publisher={Cold Spring Harbor Laboratory Press}
+}
+
+@article {wolock2021evaluating,
+article_type = {journal},
+title = {Evaluating distributional regression strategies for modelling self-reported sexual age-mixing},
+author = {Wolock, Timothy M and Flaxman, Seth and Risher, Kathryn A and Dadirai, Tawanda and Gregson, Simon and Eaton, Jeffrey W},
+editor = {Franco, Eduardo and Malagón, Talía and Akullian, Adam},
+volume = 10,
+year = 2021,
+month = {jun},
+pub_date = {2021-06-24},
+pages = {e68318},
+citation = {eLife 2021;10:e68318},
+doi = {10.7554/eLife.68318},
+url = {https://doi.org/10.7554/eLife.68318},
+abstract = {The age dynamics of sexual partnership formation determine patterns of sexually transmitted disease transmission and have long been a focus of researchers studying human immunodeficiency virus. Data on self-reported sexual partner age distributions are available from a variety of sources. We sought to explore statistical models that accurately predict the distribution of sexual partner ages over age and sex. We identified which probability distributions and outcome specifications best captured variation in partner age and quantified the benefits of modelling these data using distributional regression. We found that distributional regression with a sinh-arcsinh distribution replicated observed partner age distributions most accurately across three geographically diverse data sets. This framework can be extended with well-known hierarchical modelling tools and can help improve estimates of sexual age-mixing dynamics.},
+keywords = {sexual behaviour, age mixing, bayesian statistics, sinh-arcsinh distribution, distributional regression},
+journal = {eLife},
+issn = {2050-084X},
+publisher = {eLife Sciences Publications, Ltd},
+}
+
+@unpublished{stringer2021fields,
+title= {Implementing Approximate Bayesian Inference Using Adaptive Quadrature},
+author = {Stringer, Alex},
+year = {2021},
+note= {Statistics Graduate Student Research Day 2021, The Fields Institute for Research in Mathematical Sciences},
+URL= {http://www.fields.utoronto.ca/talks/Implementing-Approximate-Bayesian-Inference-Using-Adaptive-Quadrature},
+}
+
+@unpublished{rinla2023faq,
+title= {`R-INLA` Project - FAQ},
+author = {Rue, Havard},
+year = {2023},
+note= {Accessed 23/01/2023},
+URL= {https://www.r-inla.org/faq},
+}
+
+@article{monnahan2018no,
+  title={No-U-turn sampling for fast Bayesian inference in ADMB and TMB: Introducing the adnuts and tmbstan R packages},
+  author={Monnahan, Cole C and Kristensen, Kasper},
+  journal={PloS one},
+  volume={13},
+  number={5},
+  pages={e0197954},
+  year={2018},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{stringer2021implementing,
+  title={Implementing Approximate Bayesian Inference using Adaptive Quadrature: the aghq Package},
+  author={Stringer, Alex},
+  journal={arXiv preprint arXiv:2101.04468},
+  year={2021}
+}
