--- a/01-background.Rmd
+++ b/01-background.Rmd
@@ -12,7 +12,7 @@ documentclass: book
 bibliography: references.bib
 ---
 
-# Background {-}
+# Background
 \adjustmtc
 \markboth{Background}{}
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
