--- a/02-areal-comparison.Rmd
+++ b/02-areal-comparison.Rmd
@@ -12,9 +12,9 @@ documentclass: book
 bibliography: references.bib
 ---
 
-# Understanding models for spatial structure in small-area estimation {-}
+# Understanding models for spatial structure
 \adjustmtc
-\markboth{Models for spatial structure in small-area estimation}{}
+\markboth{Models for spatial structure}{}
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
 
 The repository for this work is [`athowes/areal-comparison`](https://github.com/athowes/areal-comparison).
