--- a/03-multi-agyw.Rmd
+++ b/03-multi-agyw.Rmd
@@ -12,10 +12,22 @@ documentclass: book
 bibliography: references.bib
 ---
 
-# Spatio-temporal estimates of HIV risk group proportions for adolescent girls and young women across 13 priority countries in sub-Saharan Africa {-}
+# A multinomial spatio-temporal model for risk group proportions
 \adjustmtc
-\markboth{Spatio-temporal estimates of HIV risk group proportions for adolescent girls and young women across 13 priority countries in sub-Saharan Africa}{}
+\markboth{A multinomial spatio-temporal model for risk group proportions}{}
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
 
-The repository for this work is [`athowes/multi-agyw`](https://github.com/athowes/multi-agyw).
-Include an edited version of the corresponding paper here.
+In this chapter I describe an application of Bayesian spatio-temporal statistics to small-area estimation of HIV risk group proportions.
+This project was initially worked on by Kathryn Risher, who continues to lead dissemination of the results as a tool to be used by countries, as well as model development and data extensions, and is described in @howes2022spatio, which I draw from here.
+Code for the analysis in this chapter is available from [`athowes/multi-agyw`](https://github.com/athowes/multi-agyw).
+
+## Background
+
+## Data
+
+## Statistical model
+
+## Results
+
+## Conclusions
+
